--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <h3 class="card-title text-center">Crystal Selection</h3>
           </div>
           <div class="card-body text-center">
-            <img src="images/blue.png" id="blue">
-            <img src="images/green.png" id="green">
-            <img src="images/red.png" id="red">
-            <img src="images/yellow.png" id="yellow">
+            <img src="assets/images/blue.png" id="blue">
+            <img src="assets/images/green.png" id="green">
+            <img src="assets/images/red.png" id="red">
+            <img src="assets/images/yellow.png" id="yellow">
           </div>
         </div>
 
@@ -130,7 +130,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Main Game Logic  -->
-  <script src="logic.js"></script>
+  <script src="assets/logic.js"></script>
 </body>
 
 </html>
